@@ -41,7 +41,8 @@ public class ChimerismDetection
     private double mChimerismLevel;
 
     public ChimerismDetection(
-            final AmberData amberData, final CobaltData cobaltData, List<ObservedRegion> observedRegions, final RefGenomeVersion refGenomeVersion)
+            final AmberData amberData, final CobaltData cobaltData, List<ObservedRegion> observedRegions,
+            final RefGenomeVersion refGenomeVersion)
     {
         mAmberData = amberData;
         mCobaltData = cobaltData;
@@ -57,18 +58,26 @@ public class ChimerismDetection
         mChimerismLevel = 0;
     }
 
-    public boolean isDetected() { return mChimerismLevel > CHIMERISM_SAMPLE_CUTOFF; }
+    public boolean isDetected()
+    {
+        return mChimerismLevel > CHIMERISM_SAMPLE_CUTOFF;
+    }
+
+    public double chimerismLevel()
+    {
+        return mChimerismLevel;
+    }
 
     public void run()
     {
-        detectChrimerism();
+        detectChimerism();
 
         applyFit();
     }
 
-    private void detectChrimerism()
+    private void detectChimerism()
     {
-        Map<String,List<ObservedRegion>> chrFilteredRegions = Maps.newHashMap();
+        Map<String, List<ObservedRegion>> chrFilteredRegions = Maps.newHashMap();
 
         for(ObservedRegion region : mFilteredRegions)
         {
@@ -90,9 +99,11 @@ public class ChimerismDetection
             List<ObservedRegion> filteredRegions = chrFilteredRegions.get(chrStr);
 
             if(filteredRegions == null)
+            {
                 continue;
+            }
 
-            List<AmberBAF> amberBAFs = mAmberData.ChromosomeBafs.get(chromosome).stream().collect(Collectors.toList());
+            List<AmberBAF> amberBAFs = mAmberData.ChromosomeBafs.get(chromosome).stream().toList();
 
             int amberBafIndex = 0;
 
@@ -105,7 +116,9 @@ public class ChimerismDetection
                     AmberBAF amberBAF = amberBAFs.get(amberBafIndex);
 
                     if(amberBAF.Position > regionBafData.end())
+                    {
                         break;
+                    }
 
                     if(amberBAF.Position >= regionBafData.start())
                     {
@@ -138,21 +151,18 @@ public class ChimerismDetection
     private void applyFit()
     {
         final KernelEstimator estimator = new KernelEstimator(0.001, CHIMERISM_KDE_BANDWIDTH);
-
         List<Double> bafValues = Lists.newArrayList();
 
-        for(ObservedRegion region : mFilteredRegions)
-        {
-            // TODO: get cobalt data, calculate a BAF
-            double baf = 0;
-
-            bafValues.add(baf);
-            estimator.addValue(baf, 1.0);
-        }
-
-        double[] bafs = IntStream.rangeClosed(0, 51).mapToDouble(x -> x / 100d).toArray();
+        mRegionBafData.forEach(regionBafData ->
+                regionBafData.AmberBAFs.forEach(amberBAF ->
+                {
+                    bafValues.add(amberBAF.tumorModifiedBAF());
+                    estimator.addValue(amberBAF.tumorModifiedBAF(), 1.0);
+                }));
+        double[] bafs = IntStream.rangeClosed(50, 100).mapToDouble(x -> x / 100d).toArray();
         double[] densities = DoubleStream.of(bafs).map(estimator::getProbability).toArray();
 
+        double max = 0;
         for(int i = 1; i < densities.length - 1; i++)
         {
             double density = densities[i];
@@ -163,8 +173,13 @@ public class ChimerismDetection
                 int peakCount = count(baf, bafValues);
 
                 PPL_LOGGER.debug(format("discovered peak: count(%d) baf(%.3f)", peakCount, baf));
+                if(baf > max)
+                {
+                    max = baf;
+                }
             }
         }
+        mChimerismLevel = 2 * (1 - max);
     }
 
     private static int count(double peak, final List<Double> values)
@@ -197,7 +212,9 @@ public class ChimerismDetection
         public double bafStandardDeviation()
         {
             if(mStandardDeviation != null)
+            {
                 return mStandardDeviation;
+            }
 
             double[] doubles = new double[AmberBAFs.size()];
 
@@ -210,8 +227,14 @@ public class ChimerismDetection
             return mStandardDeviation;
         }
 
-        public int bafCount() { return AmberBAFs.size(); }
+        public int bafCount()
+        {
+            return AmberBAFs.size();
+        }
 
-        public String toString() { return format("region(%s) points(%d)", super.toString(), AmberBAFs.size()); }
+        public String toString()
+        {
+            return format("region(%s) points(%d)", super.toString(), AmberBAFs.size());
+        }
     }
 }
